<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf2_web_republisher</name>
  <version>0.3.2</version>
  <description>Republishing of Selected TFs</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="jkammerl@willowgarage.com">Julius Kammer</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/tf2_web_republisher</url>
  <url type="bugtracker">https://github.com/RobotWebTools/tf2_web_republisher/issues</url>
  <url type="repository">https://github.com/RobotWebTools/tf2_web_republisher</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
